# fastapi_template

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  AI_CHANGE_CHECKLIST.md  ARCHITECTURE.md  DECISIONS.md  Dockerfile  Dockerfile copy  ENHANCEMENT_QUEUE.md  Makefile  README.md  Using fastapi notes.txt  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  gunicorn.service  mypy.ini  nginx  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: build-deploy.yml  ci.yml
.hypothesis/constants/: 033ea622aa4c6289  03d8f29f7f56face  14294de6b78f7b7a  14a7d5a64e113978  1a7fe6e2e09bf399  1e7958c39de76b71  2abb483dd16d0c21  3152d92ca0fa214f  36b66926ad0943c2  3e7e83ee4741c8e3  48ff47aef1681c0f  4dfd9e7eb1f27f10  4e933ac639a8ffb1  573c1b2628a7be9c  58c4758609f1840a  58dff8e6e87d2d3a  5ef95a8b478a2e98  6121e541bb415295  69137d07c0f7e0f4  75830cb8917bf2e7  80883baf762ff332  836f0284c172f428  8465142bff645290  9179140ec10bca4d  970302648e69bff2  9e1eaa7b56954523  9e85589aa9f8b7ed  a6005487c582d027  (+14 more)
alembic/: README  env.py  script.py.mako
app/: calculations.py  config.py  database.py  errors.py  health.py  main.py  models.py  oauth2.py  oauth_external.py  observability.py  outbox.py  rate_limit.py  redis_client.py  schemas.py
mutants/: mutmut-stats.json
scripts/: scaffold_domain.sh
tests/: conftest.py  database.py  test_auth_lifecycle.py  test_calculations.py  test_oauth_routes.py  test_posts.py  test_users.py  test_votes.py
worker/: __init__.py  arq_worker.py  run_worker.py
(+56 files in other folders)
